# lut_mm

./: .gitignore  CMakeLists.txt  README.md  lut_mm.cpp  lut_mm.h  lut_mm_optimized.cpp  lut_mm_optimized.h  main.cpp  permutations.cpp  permutations.h  profiling.h  weight_packing.cpp  weight_packing.h
reference/: main.py  weight_packing.py
results/: thread_scaling.csv
src/: bench_main.cpp  lut_build.h  ternary_mm.h  ternary_mm_avx2.cpp  ternary_mm_avx512.cpp  ternary_mm_bitnet.cpp  ternary_mm_bitnet512.cpp  ternary_mm_ref.cpp  ternary_mm_vnni.cpp
tools/: bench_python.py  gen_bitnet_tl2.py  pack_tl2.py  plot_scaling.py
writeups/: avx512.md  idea.md
